--- a/css/main.css
+++ b/css/main.css
@@ -2115,12 +2115,17 @@ html {
   margin-bottom: 3.5rem;
 }
 
+.my-32 {
+  margin-top: 8rem;
+  margin-bottom: 8rem;
+}
+
 .-mt-10 {
   margin-top: -2.5rem;
 }
 
-.-mt-24 {
-  margin-top: -6rem;
+.-mt-16 {
+  margin-top: -4rem;
 }
 
 .-mt-9 {
@@ -2165,6 +2170,10 @@ html {
 
 .h-12 {
   height: 3rem;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .max-h-screen {
